--- a/.dvc/config
+++ b/.dvc/config
@@ -1,4 +1,6 @@
 [core]
-    remote = myremote
+    remote = remote_place
 ['remote "myremote"']
-    url = gdrive://1rOdOD7NgXziYG539-F1Zh7i9_599umc-
+    url = gdrive://1vpBbSwDbIQZTxYxF7cIZtiDd9cYpau1Z/dvcstore
+['remote "remote_place"']
+    url = gdrive://1vpBbSwDbIQZTxYxF7cIZtiDd9cYpau1Z
