--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
-matplotlib==3.4.2
-numpy==1.19.5
-pandas==1.2.4
-seaborn==0.11.1
-scipy==1.6.1
-statsmodels==0.12.2
-tensorflow==2.5.0
-mlflow==1.19.0
+matplotlib==3.5.1
+numpy==1.22.3
+pandas==1.4.2
+seaborn==0.11.2
+scipy==1.8.0
+statsmodels==0.13.2
+tensorflow==2.9.1
+mlflow==1.26.0
 sklearn==0.0
-xgboost==1.4.2
+scikit-learn==1.0.2
+plotly==5.8.0
+openpyxl==3.0.9
+streamlit==1.8.1
+mysql-connector-python==8.0.29
