--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,9 @@
 version: "3.7"
 services:
-  mlflow:
-    container_name: mlflow
+  streamlit:
+    container_name: streamlit
     build:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "80:5000"
+      - "80:8501"
